{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 152,
  "lineage": "25155073-7149-b970-6203-8994bfcc94da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:776655485697:internet-gateway/igw-04289cc20ebfed7dd",
            "id": "igw-04289cc20ebfed7dd",
            "owner_id": "776655485697",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-09837a485391e4705"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:776655485697:route-table/rtb-0bb919baa9dcb0668",
            "id": "rtb-0bb919baa9dcb0668",
            "owner_id": "776655485697",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-RouteTable"
            },
            "tags_all": {
              "Name": "Private-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09837a485391e4705"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:776655485697:route-table/rtb-09690d11d95e25868",
            "id": "rtb-09690d11d95e25868",
            "owner_id": "776655485697",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04289cc20ebfed7dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RouteTable"
            },
            "tags_all": {
              "Name": "Public-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09837a485391e4705"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03742253435e76c7d",
            "route_table_id": "rtb-09690d11d95e25868",
            "subnet_id": "subnet-0a7ccb51ea05ea015"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043a2660ba2dffa61",
            "route_table_id": "rtb-09690d11d95e25868",
            "subnet_id": "subnet-01f0f020fd1ee3d6f"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0681683c6395b1073",
            "route_table_id": "rtb-09690d11d95e25868",
            "subnet_id": "subnet-034fe513f1f056d63"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05129842f66ed3261",
            "route_table_id": "rtb-0bb919baa9dcb0668",
            "subnet_id": "subnet-0bbe27bd894adf9ad"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00dddfcf3a3de4b7a",
            "route_table_id": "rtb-0bb919baa9dcb0668",
            "subnet_id": "subnet-098f7f3389d95d0cb"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065d2f90848842407",
            "route_table_id": "rtb-0bb919baa9dcb0668",
            "subnet_id": "subnet-022c8c014d7c95504"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:776655485697:security-group/sg-0b78dbbf2cd476eec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowed from Terraform-new",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b78dbbf2cd476eec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "112.32.43.4/32"
                ],
                "description": "Allowed from Terraform-new",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowed from Terraform-new",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowed from Terraform-new",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "myec2-sg",
            "name_prefix": "",
            "owner_id": "776655485697",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-SG"
            },
            "tags_all": {
              "Name": "EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd6edb783146899d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:776655485697:subnet/subnet-0bbe27bd894adf9ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbe27bd894adf9ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776655485697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "PrivateSubnet-0"
            },
            "vpc_id": "vpc-09837a485391e4705"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:776655485697:subnet/subnet-098f7f3389d95d0cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098f7f3389d95d0cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776655485697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "PrivateSubnet-1"
            },
            "vpc_id": "vpc-09837a485391e4705"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:776655485697:subnet/subnet-022c8c014d7c95504",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.20.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022c8c014d7c95504",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776655485697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "PrivateSubnet-2"
            },
            "vpc_id": "vpc-09837a485391e4705"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:776655485697:subnet/subnet-0a7ccb51ea05ea015",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7ccb51ea05ea015",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776655485697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-1"
            },
            "tags_all": {
              "Name": "PublicSubnet-1"
            },
            "vpc_id": "vpc-09837a485391e4705"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:776655485697:subnet/subnet-01f0f020fd1ee3d6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f0f020fd1ee3d6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776655485697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-2"
            },
            "tags_all": {
              "Name": "PublicSubnet-2"
            },
            "vpc_id": "vpc-09837a485391e4705"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:776655485697:subnet/subnet-034fe513f1f056d63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034fe513f1f056d63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776655485697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-3"
            },
            "tags_all": {
              "Name": "PublicSubnet-3"
            },
            "vpc_id": "vpc-09837a485391e4705"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:776655485697:vpc/vpc-09837a485391e4705",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-04426ad7ed58861ec",
            "default_route_table_id": "rtb-06622ef60be2a1c82",
            "default_security_group_id": "sg-060bb56706e8b5820",
            "dhcp_options_id": "dopt-0beb195597e251199",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09837a485391e4705",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06622ef60be2a1c82",
            "owner_id": "776655485697",
            "tags": {
              "Name": "TerraVPC"
            },
            "tags_all": {
              "Name": "TerraVPC"
            }
          }
        }
      ]
    }
  ]
}